tests/specs/ecosystem/rehype_pretty/transformers/0_1_0.test
rehype-pretty/transformers/0.1.0
-- deno.lock --
{}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2307 [ERROR]: Cannot find module 'file://<tmpdir>/src/shiki'.
    at file://<tmpdir>/src/copy-button.ts:1:39

error: Type checking failed.

